Introduce flags for configurable reporting